# vs_code_selenium

./: CHANGELOG.md  README.md
csharp/: README.md
csharp/selenium/: .gitignore  csharp.sln
csharp/selenium/selenium_tests/: SeleniumTests.cs  selenium_tests.csproj
csharp/selenium_tests/: SeleniumTests.cs
python/: README.md  pyproject.toml
python/playwright/: README.md  pyproject.toml  requirements.txt
python/playwright/tests/: test_playwright.py  test_playwright_more_tests.py
python/selenium/: README.md
python/selenium/tests/: test_selenium.py
python/tests/: test_selenium.py
rust/: .gitignore  README.md
rust/fantoccini_tests/: Cargo.toml
rust/fantoccini_tests/src/: lib.rs
